[tool.poetry]
name = "Rachmaninbot"
version = "1.1.0"
description = ""
authors = ["Nicu Ducal <nicu.ducal01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
pafy = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
